manifests/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gemma-route
spec:
  parentRefs:
    - name: inference-gw
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v1/
      backendRefs:
        - group: inference.networking.gke.io
          kind: InferencePool
          name: gemma-pool
